# SPL-1

./: CMakeLists.txt  github_help.txt  main.cpp
src/: Activation.cpp  Activation.h  Backward.cpp  Backward.h  Dense.cpp  Dense.h  Gradient_Descent.cpp  Gradient_Descent.h  Layer.cpp  Layer.h  LossFunction.cpp  LossFunction.h  Math_func.cpp  Math_func.h  Matrix.cpp  Matrix.h  Node.cpp  Node.h  corpus.txt
